Partial_14Dec2021/force-app/main/default/objects/KAM_Feedback__c/KAM_Feedback__c.object-meta.xml
<CustomObject>
    <label>KAM Feedback</label>
    <nameField>
        <label>KAM Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KAM Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>