Partial_14Dec2021/force-app/main/default/objects/KAM_Feedback__c/fields/Call_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Person_Name__c</fullName>
    <label>Call Person Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sundaresan Sadasivam</fullName>
            </value>
            <value>
                <fullName>Amarnath G K</fullName>
            </value>
            <value>
                <fullName>Vikas Gera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>