Partial_14Dec2021/force-app/main/default/objects/KAM_Feedback__c/fields/KAM_Feedback_Master__c.field-meta.xml
<CustomField>
    <fullName>KAM_Feedback_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM Feedback Master</label>
    <referenceTo>KAM_Feedback_Master__c</referenceTo>
    <relationshipLabel>KAM Feedbacks</relationshipLabel>
    <relationshipName>KAM_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>