Partial_14Dec2021/force-app/main/default/objects/KAM_Feedback__c/fields/mobile_status__c.field-meta.xml
<CustomField>
    <fullName>mobile_status__c</fullName>
    <formula>IF(ISPICKVAL(Status__c,&apos;Wrong Number&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mobile status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>