Partial_14Dec2021/force-app/main/default/objects/KAM_Feedback__c/fields/OverAll_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>OverAll_Satisfaction__c</fullName>
    <label>OverAll Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>