Partial_14Dec2021/force-app/main/default/objects/KAM_Feedback__c/fields/status_Remarks__c.field-meta.xml
<CustomField>
    <fullName>status_Remarks__c</fullName>
    <label>status Remarks</label>
    <type>TextArea</type>
</CustomField>