Partial_14Dec2021/force-app/main/default/objects/KAM_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_Person_Name__c</columns>
    <columns>KAM_Feedback_Master__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>